# ProjectDuckDB-01

./: .pre-commit-config.yaml  README.md  pyproject.toml
projectduckdb_01/: .gitignore  __init__.py  geradados.py
