[project]
name = "projectduckdb-01"
version = "0.1.0"
description = ""
authors = [
    {name = "Analista Oficial",email = "analista.oficial@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb (>=1.1.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
